--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Page Title</title>
 </head>
 <body>
+    <h1>MAIN branch paragraph</h1>
     <h1>This is a Heading</h1>
     <h1>This is a another Heading</h1>
     <p>First paragraph.</p>
