feature c paragraph added to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>This is a Heading</h1>
     <h1>This is a another Heading</h1>
     <p>First paragraph.</p>
-    <p>This is a paragraph.</p> 
+    <p>This is a paragraph.</p>
+    <p>This is feature-c paragraph</p>
 </body>
 </html>
