Changed index.html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>This is a another Heading</h1>
     <p>First paragraph.</p>
     <p>This is a paragraph.</p>
-    <p>This is feature-c paragraph</p>
+    <p>This is feature-c paragraph again</p>
 </body>
 </html>
