--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-    <h1>MAIN branch paragraph</h1>
+    <h1>Updated MAIN branch paragraph</h1>
 </body>
 </html>
